Changed references and plots

--- a/models.Rmd
+++ b/models.Rmd
@@ -140,7 +140,7 @@ y_{ijk} \sim
 (\#eq:mog)
 $$
 
-The predictions for this model is as followed. Mixture observed in high and low attachment are consistent with both, accounts of off-line attachment or interference during sentence comprehension [@christianson2001thematic; @logavcev2016multiple] but also non-incremental planning during syntactic encoding [@Do2017; @lee13; @Mommaetal2017]. However, and crucially, a mixture in global ambiguities is only expected if the regeneration of a syntactic structure is more process demanding for certain interpretations [e.g. @potter2012conceptual]. As suggested before, more complex syntactic arrangements such as high attachment might be more costly for the syntactic encoder [@all07; @lee13; @martin2010planning; @not10] and thus might lead to longer onset latencies when the sentence was (or indeed had to) preplanning in a non-incremental way for global ambiguities but also for temporary ambiguities. We would expect that the latter would affect low attachment less than high attachment in spite of the preference for high attachment in English.
+The predictions for this model is as followed. Mixture observed in high and low attachment are consistent with both, accounts of off-line attachment or interference during sentence comprehension [@christianson2001thematic; @logavcev2016multiple] but also non-incremental planning during syntactic encoding [@do2019subjecthood; @lee13; @momma2019beyond]. However, and crucially, a mixture in global ambiguities is only expected if the regeneration of a syntactic structure is more process demanding for certain interpretations [e.g. @potter2012conceptual]. As suggested before, more complex syntactic arrangements such as high attachment might be more costly for the syntactic encoder [@all07; @lee13; @martin2010planning; @not10] and thus might lead to longer onset latencies when the sentence was (or indeed had to) preplanning in a non-incremental way for global ambiguities but also for temporary ambiguities. We would expect that the latter would affect low attachment less than high attachment in spite of the preference for high attachment in English.
 
 # Results
 
