--- a/rfr/refSP.bib
+++ b/rfr/refSP.bib
@@ -2693,6 +2693,27 @@ pages = {274--279},
 year = {2000},
 }
 
+@article{do2019subjecthood,
+	title={Subjecthood and linear order in linguistic encoding: {E}vidence from the real-time production of wh-questions in {E}nglish and {Mandarin Chinese}},
+	author={Do, Monica L. and Kaiser, Elsi},
+	journal={Journal of Memory and Language},
+	volume={105},
+	pages={60--75},
+	year={2019},
+	publisher={Elsevier}
+}
+
+
+@article{momma2019beyond,
+  title={Beyond linear order: The role of argument structure in speaking},
+  author={Momma, Shota and Ferreira, Victor S.},
+  journal={Cognitive Psychology},
+  volume={114},
+  pages={101228},
+  year={2019}
+}
+
+
 
 @article{yan08,
 author = {J. C. Yang and Y. F. Yang},
