Added link to github

--- a/models.Rmd
+++ b/models.Rmd
@@ -50,7 +50,7 @@ Global ambiguities (1) are sentences with two possible interpretations of which 
 
 # Model descriptions
 
-The following models aim to compare different predictions on how attachment ambiguities affect recall-onset latencies. Data were analysed in Bayesian models [@gelman2014;@mcelreath2016statistical]. All models were implemented in the probabilistic programming language Stan [@carpenter2016stan;@hoffman2014no]. Models were fitted with weakly informative priors [see @mcelreath2016statistical] and run with 8,000 iterations on 3 chains with a warm-up of 4,000 iterations and no thinning. Model convergence was confirmed by the Rubin-Gelman statistic [@gelman1992] and inspection of the Markov chain Monte Carlo chains.
+The following models aim to compare different predictions on how attachment ambiguities affect recall-onset latencies. Data were analysed in Bayesian models [@gelman2014;@mcelreath2016statistical]. All models were implemented in the probabilistic programming language Stan [@carpenter2016stan;@hoffman2014no]. Models were fitted with weakly informative priors [see @mcelreath2016statistical] and run with 8,000 iterations on 3 chains with a warm-up of 4,000 iterations and no thinning. Model convergence was confirmed by the Rubin-Gelman statistic [@gelman1992] and inspection of the Markov chain Monte Carlo chains. All scripts and Stan models with the names identified below can be found on [GitHub](https://github.com/jensroes/Sentence-recall).
 
 For all models we assume that onset latencies vary across participants $I$. The variance associated with $i$s participants is $u_i$ and is normal distributed around 0 with a between participants variance $\sigma_u^2$, i.e. $u_i \sim Normal(0, \sigma_u^2)$ where $i = 1, \dots, I$. Similarly each item $j$ (sets of stimulus sentences) with $j = 1, \dots, J$ has a variance $w_j$ that is distributed around 0 with a between item variance $\sigma_w^2$, i.e. $w_j \sim Normal(0, \sigma_w^2)$. Participants and items are added to the models as random intercepts [@barr2013random;@bates2015parsimonious]. Further we assume that the onset latency comes from a log-normal distribution.
 
